test/sema/negative/movesema/if_move.impala
fn f() -> () {
    let a = ~10;
    if 8 < 0 {
        let b = a;
    }
    let c = a;
}
